Text and Spacing fixes

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -29,7 +29,7 @@ body {
 //–– 4) Left block styling
 .header-left .site-title,
 .header-left .nav-link {
-  color: #fff;
+  color: #A1A1A1;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
 }
@@ -37,7 +37,7 @@ body {
 .header-left .site-title {
   font-size: 1rem;
   margin-right: 1rem;
-  color: #fff;
+  color: #A1A1A1;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
 }
